# AdvancedProgrammingLab

./: README.md  binaryFiles.c  linkedLists.c
First Qt Project/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
